# SiafTools

./: .gitignore  AGENTS.md  CHANGELOG.md  LEIA-ME_copia_produtos_siaf.txt  README.md  ROADMAP.md  Validar_Bases.cmd  build.spec  copiar_produtos_siaf.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: compatibility-matrix.md  phase-0-status.md  phase-1-status.md  phase-2-status.md  phase-3-status.md  phase-4-status.md  phase-5-status.md  phase-6-status.md  phase-7-status.md  phase-8-status.md  phase-9-status.md
scripts/: build.ps1  check_runtime.py  diagnose.py  probe_discovered_databases.py  ui_smoke.py
src/: main.py
src/siaf_support_toolbox/: __init__.py  main.py
tests/: conftest.py
tests/integration/: test_ui_lifecycle.py
tests/unit/: test_architecture.py  test_bounded_scan.py  test_config_detector.py  test_connection_service.py  test_database_locator.py  test_diagnostic_export_service.py  test_discovery_orchestrator.py  test_environment_discovery_service.py  test_environment_page.py  test_firebird_probe.py  test_firebird_query_executor.py  test_firebird_schema_inspector.py  test_install_and_client_detectors.py  test_logging.py  test_main_bootstrap.py  test_main_window_schema_state.py  test_mode_classifier.py  test_models.py  test_navigation.py  test_network_detector.py  test_paths.py  test_phase_eight_templates.py  test_phase_nine_templates.py  test_phase_seven_templates.py  test_preferences.py  test_query_execution_service.py  test_query_export_service.py  test_query_result_store.py  test_schema_classifier.py  test_screen_geometry.py  (+8 more)
(+57 files in other folders)
