[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "siaf-support-toolbox"
version = "0.1.0.dev0"
description = "Ferramenta desktop de descoberta e suporte seguro ao ambiente SIAF/Firebird"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fdb>=2.0.2,<3",
  "psutil==5.9.8",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
  "pyinstaller>=6,<7",
]

[project.scripts]
siaf-support-toolbox = "siaf_support_toolbox.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
